--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #b69cc0;
+  /* background-color: '#f5f5f5'; */
+  background-color: #fda;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
