--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   /* background-color: '#f5f5f5'; */
-  background-color: #fda;
+  background-color: rgb(225, 255, 229);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
